--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.2
   cupertino_icons: ^1.0.2
-  
+  faker: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +23,7 @@ dev_dependencies:
   build_runner: ^2.1.7
   mockito: ^5.0.17 
   flutter_lints: ^1.0.0
+  
 
 flutter:
 
